--- a/escorts_directory/wwwroot/age-verification/index.html
+++ b/escorts_directory/wwwroot/age-verification/index.html
@@ -1,26 +1,38 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-<title>Age Verification</title>
+    <title>Age Verification</title>
 
-<link href="css/age-verificationex.css" rel="stylesheet">	
+    <link href="css/age-verificationex.css" rel="stylesheet" />
 </head>
 
 <body>
-<h1>Welcome!</h1>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <h1>THIS WEBSITE IS FOR ADULTS ONLY!</h1>
+    <p>This website is meant only for people who have reached the Age of majority in their jurisdiction. You should be at least eighteen (18) years of age or above to access this website. In jurisdictions where <strong><i>Age of majority</i></strong> is defined to be nineteen (19) years of age or twenty-one (21) years of age you should access this website only if you are 19 or 21 years of age or above.</p>
+    <p>When you access this website, you represent to us that you are an adult individual in your jurisdiction and <i>not a minor.</i></p>
+    <p>By accessing any portion of this website beyond this pop-up, you agree to our <b>Terms & Conditions</b>. Unauthorized access and use of this website may violate applicable law in your jurisdiction.</p>
+    <p>We do not create, edit, endorse or in any manner authenticate or promote any content that is shown on any of the advertisements. However, all content including text and images on all advertisements posted on this site must comply with our age and content-related policies and standards.</p>
+    <p>We have a zero-tolerance policy towards human trafficking, prostitution, and other forms of inappropriate and illegal acts and conduct. We cooperate with law enforcement pursuant to subpoenas and other appropriate legal processes.</p>
+    <p>Any conduct or activity on this site that violates our zero-tolerance policy may result in cancellation of that member’s membership and may also led to referral to appropriate law enforcement authorities. Any user of this site swears not to use this site in violation of the site’s policies and also swears to abide by all local, state, and federal law in their respective jurisdiction.</p>
+    <p>The user additionally agrees to <i><b>report violations</b></i> to appropriate local or federal authorities.</p>
+    <p>In addition, the user agrees to <i><b>report suspected cases of exploitation of minors and/or human trafficking to appropriate authorities</b></i>. German users of the site may contact the YPA <i><b>here</b></i>.</p>
+    <p>This site uses cookies and by continuing to browse and use this site you agree to our use of cookies.</p>
+    <p></p>
 </body>
 
 
+
+
+
+
+</html>
 <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 <script src="http://cdn.jsdelivr.net/jquery.cookie/1.4.1/jquery.cookie.min.js"></script>
 <script src="js/age-verificationex.js"></script>
-</html>
+
+
+
